Set margin to zero for .row class to stop flash message background to overflow on large screen

--- a/vagrant/catalog/static/css/styles.css
+++ b/vagrant/catalog/static/css/styles.css
@@ -9,6 +9,9 @@ body {
 header, footer {
   background-color: #484848; }
 
+.row {
+  margin: 0px;
+}
 .main {
   /*background-image: url(../images/background.jpg);*/
   background-color: #00F2a0;
